name:                gltree
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Craig Roche
maintainer:          cdxr01@gmail.com
copyright:           Copyright (c) Craig Roche 2013
category:            Graphics
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     Graphics.Rendering.OpenGL.RenderTree
  -- other-modules:       
  build-depends:       base ==4.6.*, OpenGL ==2.8.*, OpenGLRaw ==1.3.*, data-fix ==0.0.*
