name:                tooty
version:             0.1.2.0
synopsis:            a minimal Haskell DSL for 2d drawing with OpenGL
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Craig Roche
maintainer:          cdxr01@gmail.com
copyright:           Copyright (c) Craig Roche 2013
category:            Graphics
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     Graphics.Tooty, Graphics.Tooty.Geometry
  other-modules:       Graphics.Tooty.Internal
  build-depends:       base ==4.6.*, OpenGL ==2.8.*, linear ==1.2.*, colour ==2.3.*
